--- a/lib/board/modaledit/modal.html
+++ b/lib/board/modaledit/modal.html
@@ -78,6 +78,66 @@
                             </table>
                         </div>
                     </div>
+                    <div class="form-group" data-bind="if: type === 'rawuniquestringset', visible: type === 'rawuniquestringset'">
+                        <label class="col-sm-2 control-label" data-bind="text: name"></label>
+                        <div class="col-sm-10">
+                            <table class="table table-condensed table-stripped">
+                                <thead>
+                                    <th>#</th>
+                                    <th>value</th>
+                                    <th></th>
+                                </thead>
+                                <tbody data-bind="foreach: strings">
+                                    <tr>
+                                        <th scopre="row" data-bind="text: $index"></th>
+                                        <td data-bind="text: $data"></td>
+                                        <td>
+                                            <button class="btn" data-bind="click: $parent.remove">remove</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <th></th>
+                                    <th class="form-group">
+                                        <input class="form-control" type="text" data-bind="textInput: value, executeOnEnter: add">
+                                    </th>
+                                    <th>
+                                        <button class="btn" data-bind="click: add">add</button>
+                                    </th>
+                                </tfoot>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="form-group" data-bind="if: type === 'rawstringset', visible: type === 'rawstringset'">
+                        <label class="col-sm-2 control-label" data-bind="text: name"></label>
+                        <div class="col-sm-10">
+                            <table class="table table-condensed table-stripped">
+                                <thead>
+                                    <th>#</th>
+                                    <th>value</th>
+                                    <th></th>
+                                </thead>
+                                <tbody data-bind="foreach: formTypes">
+                                    <tr>
+                                        <th scopre="row" data-bind="text: $index"></th>
+                                        <td data-bind="text: $data.name"></td>
+                                        <td>
+                                            <button class="btn" data-bind="click: $parent.remove">remove</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <th></th>
+                                    <th class="form-group">
+                                        <input class="form-control" type="text" data-bind="textInput: value, executeOnEnter: add">
+                                    </th>
+                                    <th>
+                                        <button class="btn" data-bind="click: add">add</button>
+                                    </th>
+                                </tfoot>
+                            </table>
+                        </div>
+                    </div>
                     <div class="form-group" data-bind="if: type === 'dropdownset', visible: type === 'dropdownset'">
                             <label class="col-sm-2 control-label" data-bind="text: name"></label>
                             <div class="col-sm-10">
