--- a/lib/board/modaledit/modal.html
+++ b/lib/board/modaledit/modal.html
@@ -78,6 +78,86 @@
                             </table>
                         </div>
                     </div>
+                    <div class="form-group" data-bind="if: type === 'tableformset', visible: type === 'tableformset'">
+                        <label class="col-sm-2 control-label" data-bind="text: name"></label>
+                        <div class="col-sm-10">
+                            <table class="table table-condensed table-stripped">
+                                <thead>
+                                  <th>Fields</th>
+                                  <th>Types</th>
+                                  <th>Names</th>
+                                  <th>Labels</th>
+                                  <th></th>
+                                </thead>
+                                <tbody data-bind="foreach: formattrs">
+                                  <tr>
+                                    <td data-bind="text: $data.field"></td>
+                                    <td data-bind="text: $data.type"></td>
+                                    <td data-bind="text: $data.name"></td>
+                                    <td data-bind="text: $data.label"></td>
+                                    <td>
+                                      <button class="btn" data-bind="click: $parent.remove">remove</button>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                                <tfoot>
+                                  <th class="form-group">
+                                    <input class="form-control" type="text" data-bind="textInput: formfield, executeOnEnter: add">
+                                  </th>
+                                  <th class="form-group">
+                                    <select class="form-control" data-bind="selectedOptions: formtype, executeOnEnter: add">
+                                        <option value="text">text</option>
+                                        <option value="email">email</option>
+                                        <option value="password">password</option>
+                                        <option value="radio">radio</option>
+                                        <option value="checkbox">checkbox</option>
+                                    </select>
+                                </th>
+                                  <th class="form-group">
+                                    <input class="form-control" type="text" data-bind="textInput: formname, executeOnEnter: add">
+                                  </th>
+                                  <th class="form-group">
+                                    <input class="form-control" type="text" data-bind="textInput: formlabel, executeOnEnter: add">
+                                  </th>
+                                  <th>
+                                    <button class="btn" data-bind="click: add">add</button>
+                                  </th>
+                                </tfoot>
+                                </table>
+                        </div>
+                    </div>
+                    <div class="form-group" data-bind="if: type === 'styleset', visible: type === 'styleset'">
+                        <label class="col-sm-2 control-label" data-bind="text: name"></label>
+                        <div class="col-sm-10">
+                            <table class="table table-condensed table-stripped">
+                                <thead>
+                                  <th>Key</th>
+                                  <th>Value</th>
+                                  <th></th>
+                                </thead>
+                                <tbody data-bind="foreach: styleattrs">
+                                  <tr>
+                                    <td data-bind="text: $data.key"></td>
+                                    <td data-bind="text: $data.value"></td>
+                                    <td>
+                                      <button class="btn" data-bind="click: $parent.remove">remove</button>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                                <tfoot>
+                                  <th class="form-group">
+                                    <input class="form-control" type="text" data-bind="textInput: key, executeOnEnter: add">
+                                  </th>
+                                  <th class="form-group">
+                                    <input class="form-control" type="text" data-bind="textInput: value, executeOnEnter: add">
+                                  </th>
+                                  <th>
+                                    <button class="btn" data-bind="click: add">add</button>
+                                  </th>
+                                </tfoot>
+                                </table>
+                        </div>
+                    </div>
                     <div class="form-group" data-bind="if: type === 'rawuniquestringset', visible: type === 'rawuniquestringset'">
                         <label class="col-sm-2 control-label" data-bind="text: name"></label>
                         <div class="col-sm-10">
