--- a/lib/board/modaledit/modal.html
+++ b/lib/board/modaledit/modal.html
@@ -89,7 +89,7 @@
                                   <th>Labels</th>
                                   <th></th>
                                 </thead>
-                                <tbody data-bind="foreach: formattrs">
+                                <tbody data-bind="foreach: formTypes">
                                   <tr>
                                     <td data-bind="text: $data.field"></td>
                                     <td data-bind="text: $data.type"></td>
