--- a/lib/board/modaledit/modal.html
+++ b/lib/board/modaledit/modal.html
@@ -135,7 +135,7 @@
                                   <th>Value</th>
                                   <th></th>
                                 </thead>
-                                <tbody data-bind="foreach: styleattrs">
+                                <tbody data-bind="foreach: tmp">
                                   <tr>
                                     <td data-bind="text: $data.key"></td>
                                     <td data-bind="text: $data.value"></td>
