--- a/lib/board/modaledit/modal.html
+++ b/lib/board/modaledit/modal.html
@@ -88,13 +88,36 @@
                                   <th>Names</th>
                                   <th>Labels</th>
                                   <th></th>
+                                  <th></th>
                                 </thead>
                                 <tbody data-bind="foreach: formTypes">
                                   <tr>
-                                    <td data-bind="text: $data.field"></td>
-                                    <td data-bind="text: $data.type"></td>
-                                    <td data-bind="text: $data.name"></td>
-                                    <td data-bind="text: $data.label"></td>
+                                    <td class="form-group">
+                                        <input class="form-control" type="text" data-bind="textInput: $data.field, executeOnEnter: $parent.edit">
+                                    </td>
+                                    <td class="form-group">
+                                        <div class="col-sm-6"> 
+                                            <input class="form-control col-sm-6" type="text" data-bind="textInput: $data.type, executeOnEnter: $parent.foo">
+                                        </div>
+                                        <div class="col-sm-6"> 
+                                            <select class="form-control col-sm-6" data-bind="selectedOptions: $data.type, executeOnEnter: $parent.edit">
+                                                    <option value="text">text</option>
+                                                    <option value="email">email</option>
+                                                    <option value="password">password</option>
+                                                    <option value="radio">radio</option>
+                                                    <option value="checkbox">checkbox</option>
+                                            </select>
+                                        </div>
+                                    </td>
+                                    <td class="form-group">
+                                        <input class="form-control" type="text" data-bind="textInput: $data.name, executeOnEnter: $parent.edit">
+                                    </td>
+                                    <td class="form-group">
+                                        <input class="form-control" type="text" data-bind="textInput: $data.label, executeOnEnter: $parent.edit">
+                                    </td>
+                                    <td>
+                                        <button class="btn" data-bind="click: $parent.edit">edit</button>
+                                      </td>
                                     <td>
                                       <button class="btn" data-bind="click: $parent.remove">remove</button>
                                     </td>
@@ -134,11 +157,19 @@
                                   <th>Key</th>
                                   <th>Value</th>
                                   <th></th>
+                                  <th></th>
                                 </thead>
                                 <tbody data-bind="foreach: tmp">
                                   <tr>
-                                    <td data-bind="text: $data.key"></td>
-                                    <td data-bind="text: $data.value"></td>
+                                    <td class="form-group">
+                                        <input class="form-control" type="text" data-bind="textInput: $data.key, executeOnEnter: $parent.edit">
+                                    </td>
+                                    <td class="form-group">
+                                        <input class="form-control" type="text" data-bind="textInput: $data.value, executeOnEnter: $parent.edit">
+                                    </td>
+                                    <td>
+                                        <button class="btn" data-bind="click: $parent.edit">edit</button>
+                                    </td>
                                     <td>
                                       <button class="btn" data-bind="click: $parent.remove">remove</button>
                                     </td>
@@ -156,6 +187,55 @@
                                   </th>
                                 </tfoot>
                                 </table>
+                        </div>
+                    </div>
+                    <div class="form-group" data-bind="if: type === 'recyclelistset', visible: type === 'recyclelistset'">
+                        <label class="col-sm-2 control-label" data-bind="text: name"></label>
+                        <div class="col-sm-10">
+                            <table class="table table-condensed table-stripped">
+                                <thead>
+                                  <th>Key</th>
+                                  <th></th>
+                                </thead>
+                                <tbody data-bind="foreach: tmpkey">
+                                  <tr>
+                                    <td data-bind="text: $data.key"></td>
+                                    <td>
+                                      <button class="btn" data-bind="click: $parent.remove">remove</button>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                                <tfoot>
+                                  <th class="form-group">
+                                    <input class="form-control" type="text" data-bind="textInput: key, executeOnEnter: add">
+                                  </th>
+                                  <th>
+                                    <button class="btn" data-bind="click: add">add</button>
+                                  </th>
+                                </tfoot>
+                            </table>
+                            <table class="table table-condensed table-stripped" data-bind="foreach: tmpkey">
+                                <thead>
+                                  <th data-bind="text: $data.key"></th>
+                                  <th></th>
+                                </thead>
+                                <tbody data-bind="foreach: $data.key.values">
+                                  <tr>
+                                    <td data-bind="text: $data.content"></td>
+                                    <td>
+                                      <button class="btn" data-bind="click: $parent.remove">remove</button>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                                <tfoot>
+                                  <th class="form-group">
+                                    <input class="form-control" type="text" data-bind="textInput: value, executeOnEnter: addItem">
+                                  </th>
+                                  <th>
+                                    <button class="btn" data-bind="click: add">add</button>
+                                  </th>
+                                </tfoot>
+                            </table>
                         </div>
                     </div>
                     <div class="form-group" data-bind="if: type === 'rawuniquestringset', visible: type === 'rawuniquestringset'">
